--- a/checkout.html
+++ b/checkout.html
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                     <div class="checkOutBoxes mb-3">
-                        <div class="chekoutSelect d-flex">
+                        <div class="chekoutSelect checkoutCountry d-flex">
                             <div class="checkoutMsgCountry"><p class="txtFadedAll m-0">Country / Region: </p></div>
                             <div class="selectDropdownCheckout">
                                 <select name="Country">
