--- a/gift.html
+++ b/gift.html
@@ -173,7 +173,7 @@
                         <div class="gift_cut_upprt">
                             <div class="d-flex cut_images">
                                 <div class="per_cut_img active">
-                                    <img src="img/other/diamond.png">
+                                    <img src="img/other/a1.png">
                                 </div>
                                 <div class="per_cut_img">
                                     <img src="img/other/diamond2.png">
@@ -617,8 +617,16 @@
             </table>
         </div>
         <div class="giftBtns mt-3 text-end">
-            <button class="btns">Compare</button>
-            <button class="btns">Add to cart</button>
+            <button class="btns">
+                <a href="./compare.html">
+                    Compare
+                </a>
+            </button>
+            <button class="btns">
+                <a href="./cart.html">
+                    Add to cart
+                </a>
+            </button>
         </div>
     </div>
 
