--- a/product.html
+++ b/product.html
@@ -45,41 +45,55 @@
                         </a>
                     </div>
                 </div>
-                <div class="headerIcon">
-                    <div class="perIcon loginIconHd">
-                        <img src="img/profile.png" class="perHdImg" id="loginJs">
-                        <div class="logSign">
-                            <ul>
-                                <li>
-                                    <a href="./signup.html">
-                                        Sign up
-                                    </a>
-                                </li>
-                                <li class="mt-1">
-                                    <a href="./signin.html">
-                                        Sign in
-                                    </a>
-                                </li>
-                            </ul>
+                <div class="headerIconUpper">
+                    <div class="headerIcon">
+                        <div class="perIcon">
+                            <a href="./wishlist.html">
+                                <img src="img/fav.png" class="perHdImg">
+                            </a>
                         </div>
-                    </div>
-                    <div class="perIcon">
-                        <a href="./wishlist.html">
-                            <img src="img/fav.png" class="perHdImg">
-                        </a>
-                    </div>
-                    <div class="perIcon">
-                        <a href="./cart.html">
-                            <img src="img/cart.png" class="perHdImg">
-                        </a>
-                    </div>
-                     <div class="perIcon searchBoxAll">
-                        <img src="img/search.png" class="perHdImg">
+                        <div class="perIcon">
+                            <a href="./cart.html">
+                                <img src="img/cart.png" class="perHdImg">
+                            </a>
+                        </div>
+                        <div class="perIcon searchBoxAll">
+                            <img src="img/search.png" class="perHdImg">
+                        </div>
+                        <div class="perIcon loginIconHd">
+                            <img src="img/profile.png" class="perHdImg">
+                            <span class="signUp_signIn signupNotHome">
+                                <a href="./signup.html"> Sign up</a>/<a href="./signin.html">Sign in</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="downHeader" id="downHeader">
+            <div class="headerIconLower">
+                <div class="headerIcon">
+                    <div class="perIcon">
+                        <a href="./wishlist.html">
+                            <img src="img/fav.png">
+                        </a>
+                    </div>
+                    <div class="perIcon">
+                        <a href="./cart.html">
+                            <img src="img/cart.png">
+                        </a>
+                    </div>
+                    <div class="perIcon searchBoxAll" id="searchBoxAll">
+                        <img src="img/search.png">
+                    </div>
+                    <div class="perIcon loginIconHd">
+                        <img src="img/profile.png">
+                        <span class="signUp_signIn signupHome">
+                            <a href="./signup.html"> Sign up</a>/<a href="./signin.html">Sign in</a>
+                        </span>
+                    </div>
+                </div>
+            </div>
             <div class="doenHdCont notHomeDoen">
                 <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
@@ -281,7 +295,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-lg-8 col-md-12 col-sm-12">
                     <div class="footerLinks">
                         <a href="./ourstory.html">Our story</a>
                     </div>
@@ -316,17 +330,17 @@
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                                                       <a href="https://twitter.com/chiragjeweller3" target="_blank">
+                            <a href="https://twitter.com/chiragjeweller3" target="_blank">
 
                                 <img src="img/twiter.png">
                             </a>
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="NewLetrSub">
                         <div class="newLtrText cust-medium-font mb-3">
-                           Sign up to receive exclusive offers and news
+                            Sign up to receive exclusive offers and news
                         </div>
                         <div class="inputBtn">
                             <div>
@@ -348,7 +362,7 @@
                                     <img src="img/sponser-1.png">
                                 </div>
                                 <div class="footerCertperImg">
-                                    <img src="img/sponser-2.png">
+                                    <img src="img/sponser-2.png" style="position: relative; left: 5px;">
                                 </div>
                                 <div class="footerCertperImg">
                                     <img src="img/sponser-3.png">
